--- a/portfolio/src/main/webapp/pages/hobbies.html
+++ b/portfolio/src/main/webapp/pages/hobbies.html
@@ -1,7 +1,6 @@
 <ul class="list-group">
-    <li class="list-group-item active" onclick="activateListItem()">Reading books (mostly  non-fiction and classics)</li>
-    <li class="list-group-item" onclick="activateListItem()">Taking general knowledge quizzes</li>
-    <li class="list-group-item" onclick="activateListItem()">Playing foosball and ping pong</li>
-    <li class="list-group-item" onclick="activateListItem()">Watching horror movies at the movie theater</li>
-    <li class="list-group-item" onclick="activateListItem()">Binge watching a TV show</li>
+    <li class="list-group-item active" onclick="activateListItem()">Reading books</li>
+    <li class="list-group-item" onclick="activateListItem()">Playing games</li>
+    <li class="list-group-item" onclick="activateListItem()">Watching animes</li>
+    <li class="list-group-item" onclick="activateListItem()">Binge watching TV series</li>
 </ul>
