updated aboutme.html with real info

--- a/portfolio/src/main/webapp/pages/aboutme.html
+++ b/portfolio/src/main/webapp/pages/aboutme.html
@@ -1,9 +1,15 @@
 <p class="tabbed-paragraph">
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed elementum pellentesque ipsum, in rutrum nisl rhoncus a. Duis efficitur semper faucibus. Integer ut eleifend neque, maximus volutpat neque. Aenean nec ornare risus, a pretium nibh. Vestibulum dolor sapien, consectetur non mauris in, elementum lobortis erat. Vivamus malesuada, elit vitae euismod tincidunt, augue odio ultrices enim, ac volutpat justo mi in metus. Morbi aliquet arcu vitae dui dignissim, in dictum magna rutrum. Vivamus ac feugiat felis. Nunc viverra, metus in malesuada feugiat, sapien ante congue nibh, iaculis pulvinar lorem felis mattis neque. Mauris facilisis lorem elementum, posuere felis ac, consectetur nunc. Suspendisse bibendum lorem at massa pulvinar ullamcorper condimentum feugiat odio. Aenean finibus arcu vel iaculis facilisis.
+    Hi, my name is Inggriany and I was born in Indonesia but I am currently residing in Singapore.
+    More precisely, I am currently studying at Nanyang Technological University, majoring in Mathematical Sciences 
+    with a Minor in Finance. Ever since I could remember, I had always loved mathematics. I think part of it was due 
+    to my mother and I did not regret it.
 </p>
 <p class="tabbed-paragraph">
-    Maecenas at viverra mi. Praesent et tincidunt eros. Nam non tellus id nisl semper pellentesque id quis quam. Donec placerat ullamcorper dolor sed consectetur. Curabitur nisi urna, porta ac auctor eget, consectetur non tellus. Pellentesque tincidunt odio lorem, eu vestibulum eros blandit ullamcorper. Ut ante nunc, pharetra a sapien et, malesuada imperdiet orci. Nulla lectus est, pretium ac augue sed, tempor facilisis massa. Suspendisse mollis vehicula hendrerit.</div>
+    However, ever since I joined univeristy, I was tempted by Computer Science by my friends, who enrolled me as a part 
+    of their team in competitive programming and CTFs. It was quite fun and I was very excited in learning how mathematics 
+    is applied in theoretical computer science.</div>
 </p>
 <p class="tabbed-paragraph bottom-paragraph">
-   Suspendisse ornare nisl id bibendum consectetur. Pellentesque tempor purus sit amet ligula fermentum, sit amet semper augue porttitor. Nunc finibus finibus porttitor. Nunc mi arcu, congue non lobortis sed, scelerisque et nisi. Aenean venenatis lobortis mi vitae molestie. Nunc dignissim nisi id nisi lacinia ultrices. Nulla ac mauris id diam sodales pellentesque eget vel erat. Nunc non faucibus eros. Cras quis turpis ut sapien molestie semper ac non dui. Curabitur ultrices enim ante, non fringilla metus ultricies vel. Duis aliquet augue quam, at consequat magna varius a. Maecenas consequat lectus at vehicula feugiat.</div>
+   I like reading Japanese manga and watching Japanese anime. As can be seen from the above picture, I am currently interested
+   in <a href="https://mangadex.org/title/21562/kusuriya-no-hitorigoto">Kusuriya no Hitorigoto</a>.</div>
 </p>
