--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -25,7 +25,7 @@
             Anyways, are you ready to get started?
         </p>
 
-        <img src="images/kusuriya.jpg" alt="Kusuriya" width="200">
+        <img src="images/kusuriya.jpg" alt="Kusuriya" width="200" class="center">
         <p>This is my current favourite manga!</p>
 
         <section id='dynamic-content'>
