add hello message via button

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -19,6 +19,8 @@
   <body>
     <div id="content">
         <h1>Hello, everyone!</h1>
+        <button class="btn btn-primary" onclick="getHelloMessage()">Hello!</button>
+        <div id="message-container"></div>
         <h3>Welcome to my personal portfolio.</h3>
         <p>Here I hope that you will gain some insights about my technical work, hobbies, ambitions, favorite movies, and so on.
             <br>
