--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -16,11 +16,9 @@
     <link rel="stylesheet" href="style.css"> 
     <script src="script.js"></script>
 
-  <body>
+  <body onload="getComments()">
     <div id="content">
         <h1>Hello, everyone!</h1>
-        <button class="btn btn-primary" onclick="getHelloMessage()">Hello!</button>
-        <div id="message-container"></div>
         <h3>Welcome to my personal portfolio.</h3>
         <p>Here I hope that you will gain some insights about my technical work, hobbies, ambitions, favorite movies, and so on.
             <br>
@@ -39,6 +37,9 @@
             <h3 id="content-title"></h3>
             <div id="content-panel"></div>
         </section>
+
+        <h1>This is the comments section!</h1>
+        <div id="comment-container"></div>
     </div>
   </body>
 </html>
