--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -38,8 +38,18 @@
             <div id="content-panel"></div>
         </section>
 
-        <h1>This is the comments section!</h1>
-        <div id="comment-container"></div>
+        <h2>This is the comments section!</h2>
+        <form action="/data" method="POST">
+            <p>Leave your comments here: </p>
+            <textarea name="user-comment"></textarea>
+            <br/>
+            <input type="submit" />  
+        </form>
+
+        <br/>
+
+        <p>See your comments here: </p>
+        <ul class="list-group" id="comment-container"></ul>
     </div>
   </body>
 </html>
