add form field for user name

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -40,6 +40,9 @@
 
         <h2>This is the comments section!</h2>
         <form action="/data" method="POST">
+            <p>Name: </p>
+            <input type="text" name="user-name">
+            <br/>
             <p>Leave your comments here: </p>
             <textarea name="user-comment"></textarea>
             <br/>
