resolve link encoding issues

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -39,6 +39,7 @@
         </section>
 
         <h2>This is the comments section!</h2>
+        <div id="log-button"></div>
         <div id="comment-form"></div>
 
         <br/>
